hphp/test/zend/bad/ext/intl/tests/transliterator_list_ids_error.php
<?php

ini_set("intl.error_level", E_WARNING);
var_dump(transliterator_list_ids(array()));

echo "Done.\n";
